progress bar and addr api

--- a/assets/variables.scss
+++ b/assets/variables.scss
@@ -5,8 +5,8 @@
 
 $secondary: #de8c01;
 
-$body-font-family: 'Roboto';
-$heading-font-family: 'Nunito';
+$body-font-family: 'Montserrat', sans-serif;
+$heading-font-family: 'Nunito', sans-serif;
 $font-size-root: 18px;
 
 @import '~vuetify/src/styles/styles.sass';
